--- a/index.html
+++ b/index.html
@@ -10,28 +10,7 @@
   <script src="app.js"></script>
 </head>
 <body ng-controller="MainCtrl">
-	<div class="container">
-		<div id="main">
-			<div ng-controller="TodoCtrl" class="well form-area">
-				<h2 class="text-center">THINGS TO DO</h2>
-				<div class="form-group">
-					<input type="text" class="form-control" ng-model="todo.title"/>
-				</div>
-				<ul>
-					<li ng-repeat="todo in todos">{{todo.title}}
-						<span class="date-span">- {{created_at | date: 'EEEE MMM dd, yyyy'}} </span>
-						<button class="btn btn-danger" style="display: block; width: 100%;" ng-click="delete(todo)">Delete</button>
-					</li>
-					
-				</ul>
-				<button class="btn btn-success" style="display: block; width: 100%;" ng-click="addTodo()">Add Todo</button>
-				<ng-pluralize count="todos.length"
-				              when="{'0': 'Nothing to do here. Get to gettin\'.',
-				                     'one': 'You have 1 thing to do.',
-				                     'other': 'You have {} things to do.'}">
-				</ng-pluralize>
-			</div>
-		</div>
-	</div>
+	<div ng-include src="'todo.html'"></div>
+</div>
 </body>
 </html>
